RESOLVED FIXED243206
[iOS] Microphone sometimes fails to capture shortly after Siri interruption
https://bugs.webkit.org/show_bug.cgi?id=243206
Summary [iOS] Microphone sometimes fails to capture shortly after Siri interruption
youenn fablet
Reported 2022-07-26 03:38:38 PDT
[iOS] Microphone sometimes fails to capture shortly after Siri interruption
Attachments
youenn fablet
Comment 1 2022-07-26 03:38:50 PDT
youenn fablet
Comment 2 2022-07-26 04:30:45 PDT
EWS
Comment 3 2022-07-26 08:35:58 PDT
Committed 252822@main (86188f57dd0f): <https://commits.webkit.org/252822@main> Reviewed commits have been landed. Closing PR #2736 and removing active labels.
EWS
Comment 4 2022-07-26 18:47:22 PDT
Committed 252853@main (a8b0c4257e42): <https://commits.webkit.org/252853@main> Reviewed commits have been landed. Closing PR #2761 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.