[iOS] Microphone sometimes fails to capture shortly after Siri interruption https://bugs.webkit.org/show_bug.cgi?id=243206 rdar://97262695

Reviewed by Eric Carlson.

We might restart capture very quickly after a phone call or Siri interruption.
In that case, the call to set the PlayAndRecord category might fail.
If it fails, instead of trying to start microphone capture, we use the suspend code path.

We also do not want to start the local audio renderer unit in case we are suspended.
This messes up the interruption state and we might no longer receive the end of interruption signal.
To do so, we return early in case the audio renderer is registered with the shared unit and the shared unit is suspended.

* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::startProducingData):
(WebCore::BaseAudioSharedUnit::startUnit):
* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h:
(WebCore::BaseAudioSharedUnit::hasClients const):
* Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.cpp:
(WebKit::RemoteAudioMediaStreamTrackRendererInternalUnitManager::Unit::start):
(WebKit::RemoteAudioMediaStreamTrackRendererInternalUnitManager::Unit::captureUnitHasStopped):

Canonical link: https://commits.webkit.org/252822@main